Fixed null content causing assertion in ReResolveStyleContext. b=54454 r=karnaze@netscape.com, a=buster@netscape.com